fix spacing

--- a/static/style.css
+++ b/static/style.css
@@ -83,6 +83,7 @@ nav a:focus {
   flex-direction: column;  /* stack vertically */
   justify-content: center; /* vertical alignment */
   align-items: center;     /* horizontal alignment */
+  margin-top:8vh;
   
   min-height: 100vh;       /* ensure full viewport height for vertical centering */
   transform: translateY(-25vh);
@@ -115,7 +116,7 @@ nav a:focus {
   text-decoration: none;           /* remove underline */
   border-radius: 5px;              /* rounded corners */
   border: none;                    /* remove default border */
-  font-family: Consolas, monospace; /* optional: match body font */
+  font-family: K2D, sans-serif;
   font-size: 32px;
   cursor: pointer;                 /* mouse pointer on hover */
   transition: background-color 0.3s ease;
@@ -169,7 +170,6 @@ nav a:focus {
 /* Editor styles */
 .editor-container {
   position: relative;
-  font-family: 'Courier New', monospace;
   font-size: 14px;
   border: 2px solid #555;
   border-radius: 5px;
@@ -211,7 +211,6 @@ nav a:focus {
   padding: 10px;
   resize: none;
   line-height: 1.5;
-  font-family: 'Courier New', monospace;
   font-size: 14px;
   box-sizing: border-box;
 }
@@ -249,7 +248,6 @@ nav a:focus {
   min-height: 100px;
   max-height: 250px;
   overflow-y: auto;
-  font-family: 'Courier New', monospace;
   font-size: 12px;
   line-height: 1.4;
   white-space: pre-wrap;
@@ -284,6 +282,7 @@ nav a:focus {
 /* problem description & incorrect solution */
 
 .problem_container {
+margin-top:10px;
   width: 100%;               /* Take up 75% of screen */
   margin: 0 auto;           /* Center it horizontally */
   display: flex;            /* Enable side-by-side layout */
@@ -296,20 +295,24 @@ nav a:focus {
   padding: 20px;
   box-sizing: border-box;
   background: #012189ab;
-  font-family: K2D, sans-serif;
+  font-family: K2D, sans-serif !important;
   color:white;
 }
 
-pre {
-  font-family: K2D, sans-serif;
+.problem_container textarea {
+  flex: 1;
+  background: #C2ECFF !important;
+  padding: 20px;
+  box-sizing: border-box;
+  color: black !important;
+  height:300px;
 }
 
-textarea {
-  flex: 1;      /* Optional styling */
-  padding: 20px;
-  height:400px;
-  box-sizing: border-box;
-  background: #C2ECFF;
-  font-family: K2D, sans-serif;
-  color:black;
+
+textarea, .code {
+    font-family: monospace !important;
+}
+
+pre {
+    font-family: K2D, sans-serif;
 }
